--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ include_directories(includes libft/includes minilibx) # headers
 
 link_directories(libft minilibx_macos) # libraries
 
-set(SOURCE_FILES main.c fdf.h get_next_line.c or_file.c fdf.c draw_map.c trans.c) # sources
+set(SOURCE_FILES main.c fdf.h get_next_line.c or_file.c fdf.c draw_map.c) # sources
 
 add_executable(FdF ${SOURCE_FILES}) # compilation
 
